src/app.css
/* app.css */

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
	font-family: 'Red Hat Text';
    font-size: calc(12px + 0.25vw);
}

.rc_h1 {
	@apply font-bold text-2xl lg:text-3xl uppercase tracking-widest break-words;
}

.rc_h2 {
	@apply font-bold text-base lg:text-xl uppercase tracking-widest break-words;
}

.rc_h3 {
	@apply font-bold text-sm lg:text-base uppercase tracking-wider break-words;
}


.rc_rotate{
    transform: rotate(40deg);
}


.rc_background_triangle{
   background-image:url(/triangle.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 0 50%;
}

.rc_hr{
	background-image:url(/hr.svg);
	background-repeat: repeat-y;
	height:7px;
	margin-top:-5px;
}


.rc_menu_visible{
	margin-top:0;
}

.rc_menu_hidden{
	margin-top:-50vh;
}

